--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.2.4",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.0.1",
     "@vercel/postgres": "^0.3.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
