Add loading skeleton

--- a/.env
+++ b/.env
@@ -22,3 +22,7 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
+GITHUB_ID="3c8370d2b17ce1d8b78f"
+GITHUB_SECRET="2b80ead272a455f945401964012551a5f2ad5719"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="8mq6v0p9h%lkivs$msmj!(5g$egfe^joh3ikjq(24s3$p4pznr"
