adding next auth

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-# Created by Vercel CLI
 NX_DAEMON="false"
 POSTGRES_DATABASE="verceldb"
 POSTGRES_HOST="ep-misty-breeze-372516-pooler.eu-central-1.postgres.vercel-storage.com"
@@ -22,7 +21,7 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
-GITHUB_ID="3c8370d2b17ce1d8b78f"
-GITHUB_SECRET="2b80ead272a455f945401964012551a5f2ad5719"
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="8mq6v0p9h%lkivs$msmj!(5g$egfe^joh3ikjq(24s3$p4pznr"
+YANDEX_CLIENT_ID=f6f30e209ccd434d86c3f524dc784119
+YANDEX_CLIENT_SECRET=e17e7360caa4467a9a70fba16e962e73
+NEXTAUTH_URL=https://new-education-nextjs13.vercel.app/api/auth
+NEXTAUTH_SECRET=uf2h73u8h238uifhn23uwif2n8u3
