--- a/.env
+++ b/.env
@@ -23,5 +23,5 @@ VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
 YANDEX_CLIENT_ID=f6f30e209ccd434d86c3f524dc784119
 YANDEX_CLIENT_SECRET=e17e7360caa4467a9a70fba16e962e73
-NEXTAUTH_URL=http://localhost:3000/api/auth/callback/yandex&state=GYagsx7K_sIU5ZKIKa9b-C9slIa0ki_V8uAd5cRum4I
+NEXTAUTH_URL=https://new-education-nextjs13.vercel.app/api/auth
 NEXTAUTH_SECRET=uf2h73u8h238uifhn23uwif2n8u3
