--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.2.32",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.15.0",
     "@types/node": "20.2.4",
@@ -20,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "negotiator": "^0.6.3",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
@@ -29,6 +31,7 @@
     "vercel": "^30.0.0"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.1",
     "prisma": "^4.15.0"
   }
 }
