adding translation to russian 7 [bug fix] move page api -> app api
Signed-off-by: woodemai <n.savchenkoo73@gmail.com>

--- a/.env
+++ b/.env
@@ -27,3 +27,4 @@ GITHUB_ID="3c8370d2b17ce1d8b78f"
 GITHUB_SECRET="be54769b9b98ba5928a2349daeeb5f3103bfa33b"
 NEXTAUTH_URL=https://new-education-nextjs13.vercel.app/api/auth
 NEXTAUTH_SECRET=uf2h73u8h238uifhn23uwif2n8u3
+BASE_URL="http://localhost:3000"
