--- a/.env
+++ b/.env
@@ -21,10 +21,10 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
+BASE_URL=http://localhost:3000
 YANDEX_CLIENT_ID=7d6aa3b4420b44e6ad7c44965c0eb175
 YANDEX_CLIENT_SECRET=ab97114677334b5d8ac31479baac3dda
 GITHUB_ID="3c8370d2b17ce1d8b78f"
 GITHUB_SECRET="be54769b9b98ba5928a2349daeeb5f3103bfa33b"
 NEXTAUTH_URL=https://new-education-nextjs13.vercel.app/api/auth
 NEXTAUTH_SECRET=uf2h73u8h238uifhn23uwif2n8u3
-BASE_URL="http://localhost:3000"
