--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "new_education",
-  "version": "0.3.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,7 +17,9 @@
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "@vercel/postgres": "^0.7.2",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "negotiator": "^0.6.3",
